deploy/okd/workspaces/notebook/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sophia-notebook
spec:
  to:
    kind: Service
    name: sophia-notebook
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
